# sweet-spot-analysis-in-north-dakota-oil-and-gas-production

./: .gitignore  2025-04-04 time series panel regression with driscoll kraay using north dakota data.ipynb  2025-04-04 time series panel regression with driscoll kraay using north dakota data.py  Bakken heatmap.ipynb  Bakken heatmap.py  README.md  article.md  bakken workbook.ipynb  bakken workbook.py  config.yaml  main.py  pyproject.toml
data/: README.md
notebooks/: 2025-04-04 time series panel regression with driscoll kraay using north dakota data.ipynb  Bakken heatmap.ipynb  bakken workbook.ipynb
output/: README.md
src/bakken_sweet_spot/: __init__.py  cli.py  config.py  data_io.py  heatmap.py  panel.py  paths.py  production.py  sweet_spot.py  workbook.py
tests/: test_config.py  test_data_io.py  test_production.py
